--- a/index.html
+++ b/index.html
@@ -4,31 +4,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Kansas State</title>
 
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
+
 	<link rel="stylesheet" type="text/css" href="style.css">
-	
+
 </head>
 <body>
-	<div class="row">
-	  <div class="large-8 columns red">
-	  		<h2>Sara Quinn</h2>
-	  </div>
-	  <div class="large-4 columns blue">
-	  	<h2> Bill Snyder</h2>
-	  </div>
-	</div>
-
-
-	<ul>
-		<li><a href="http://google.com">Google</a></li>
-		<li><a href="http://bloc.io">Bloc</a></li>
-		<ul>
-			<li>
-				<img src="http://www.fillmurray.com/200/300">
-
-			</li>
-		</ul>
+	<ul class="green">
+		<li class="red">News</li>
+		<li class="blue">Sports</li>
+		<li class="red">Local</li>
+		<li class="blue">Business</li>
+		<li class="green grow">Fake Patty</li>
 
 	</ul>
 </body>
+
 </html>
